[package]
name = "clunker"
version = "0.1.0"
authors = ["Will Page <compenguy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sam3x8e = { version = "0.1", features = ["rt"] }
cortex-m-rt = "0.6"
cortex-m = "0.6"
# Put a breakpoint on `rust_begin_unwind` to catch panics:
panic-halt = "0.2"

[profile.release]
lto = true
codegen-units = 1
debug = true
