[package]
name = "clunker"
version = "0.1.0"
authors = ["Will Page <compenguy@gmail.com>"]
edition = "2018"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atsam3x8e = { git = "https://github.com/compenguy/atsam3x8e.git", features = ["rt"] }
atsam3x8e-hal = { git = "https://github.com/compenguy/atsam3x8e-hal.git", features = ["atsam3x8e-rt"] }
cortex-m-rt = "0.6"
cortex-m = "0.6"
# Put a breakpoint on `rust_begin_unwind` to catch panics:
panic-halt = "0.2"
embedded-hal = "0.2"
nb = "0.1"

[dependencies.void]
version = "1.0"
default-features = false

[dependencies.cast]
version = "0.2"
default-features = false

[features]
rt = ["atsam3x8e/rt", "atsam3x8e-hal/atsam3x8e-rt"]

[profile.release]
lto = true
codegen-units = 1
debug = true

